# ai-ecosystem-workspace

./: .gitignore  compose.yml
Assignment1/: compose.yml
Assignment1/diagrams/: diagram.drawio
backend/: main.py  pyproject.toml  worker_settings.py
backend/core/: config.py  database.py
backend/models/: student.py
diagrams/: Assign2.drawio  diagram.drawio
sandbox/: test_arq.py  test_config.py  test_label_studio.py  test_postgres.py
scripts/: generate_label_studio_token.py
