[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "arq>=0.26.3",
    "asyncpg>=0.30.0",
    "label-studio-sdk>=1.0.8",
    "pydantic-settings>=2.8.1",
    "ruff>=0.15.22",
    "sqlalchemy>=2.0.51",
]
